# nomado-bot

./: Dockerfile.bot  Dockerfile.frontend  README.md  docker-compose.yaml  flight.ipynb  langgraph.json  new.ipynb  pyproject.toml  requirements.txt  selenium.ipynb  use-cases.md  weather.ipynb
app/utils/: state.py
bot/: main.py
bot/utils/: agents.py  graph.py  tools.py
frontend/: main.py
